fixing word wrap

--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,7 @@ body{
     padding:0;
     margin:0;
     font-family:"Montserrat";
-    font-size:16px;
+    font-size:20px;
     line-height:1.5;
     color:#606c71
 }
@@ -744,4 +744,6 @@ a:hover{
 
 .headerListItem {
     padding-left: 5%;
+    flex-grow: 1;
+    white-space: nowrap;
 }
